# kuboid

./: .gitignore  README.md  eslint.config.ts  mise.toml  package.json  vite.config.ts
.github/workflows/: build.yml  publish.yml
src/: App.tsx  ResourceTable.tsx  index.tsx  main.css  main.tsx  row-discovery.tsx  settings.tsx  subscriptions.tsx  types.tsx  well-known-formatters.tsx  well-knowns.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: DebugMenu.tsx  TooltipKubeAge.tsx
src/overview/: index.tsx
src/panes/: ResourceList.tsx
src/panes/resource-info/: ResourceInfo.tsx  ResourceInfoContext.tsx
src/panes/resource-info/panes/global/: OverviewPane.tsx  YAMLPane.tsx
src/panes/resource-table/: ResourceTable.tsx
src/panes/resource-table/layouts/: autodiscovery.tsx  builtins.tsx  well-knowns.tsx
src/panes/resource-type-list/: ResourceTypeList.tsx
src/resourceInfo/: ResourceInfo.tsx  utils.tsx
src/resourceInfo/panes/global/: EventsPane.tsx  OverviewPane.tsx  YAMLPane.tsx
src/util/: clientstate.ts  kube.ts  platform.tsx
src/util/kube/: SubscriptionContext.tsx  cache.ts  context.ts  requests.ts  routes.ts  subscriptions.tsx  types.ts
src/util/tauri/: TauriImage.tsx
tools/cluster_load/api_intense/: api-intensive.yml
tools/cluster_load/api_intense/templates/: deployment.yaml
